--- a/templates/en/sepa/sepa1.html
+++ b/templates/en/sepa/sepa1.html
@@ -14,10 +14,12 @@
         <span><details>
             <summary>
                 Help?
-            </summary>Enter your full name in the following order: title, last name, first name<br> For example: Dr. Mustermann Max
-        <br> If this bank account is not yours, please write down the name of this accounts owner.<br>
-        <i>You can not write any numbers, nor any special signs except a minus (-)</i>
-        </span>
+            </summary>
+            Enter your full name in the following order: title, last name, first name
+            <br> For example: Dr. Mustermann Max
+            <br> If this bank account is not yours, please write down the name of this accounts owner.<br>
+            <i>You can not write any numbers, nor any special signs except a minus (-)</i>
+            </span>
         </details>
         </li>
         
