--- a/templates/fr/adress/adress4.html
+++ b/templates/fr/adress/adress4.html
@@ -13,7 +13,9 @@
             <span class="extra-info"><details><summary>Help?
 
             </summary>
-            Veuillez saisir le code postal de votre adresse. Par exemple 67812, 62342
+            Veuillez saisir le code postal de votre adresse. <br>
+            <i>Le code postal ne comporte que cinq chiffres</i><br>
+            Par exemple 67812, 62342
             </details>
         </span>
         </li>
@@ -23,7 +25,9 @@
             <span class="extra-info"><details><summary>Aider?
 
             </summary>
-            Veuillez saisir le nom de la ville dans laquelle vous vivez. Par exemple: Paris, France.
+            Veuillez saisir le nom de la ville dans laquelle vous vivez. <br>
+            <i>Vous ne pouvez pas écrire de nombres, ni de signes spéciaux sauf un signe moins (-)</i><br>
+            Par exemple: Paris, Lyon.
         </details>
                
             </span>
