--- a/templates/fr/general_information/general_information1.html
+++ b/templates/fr/general_information/general_information1.html
@@ -14,7 +14,7 @@
             <span><details><summary>
                 Aider?
             </summary> 
-                <p>Entrez votre sexe ici s'il vous plaît </p>
+                <p>Veuillez choisir votre sexe ici</p>
             </details></span>
         </li>
         <li>
