--- a/templates/fr/general_information/general_information2.html
+++ b/templates/fr/general_information/general_information2.html
@@ -15,6 +15,7 @@
             </summary> 
                 <p>Entrez votre prénom ici s'il vous plaît.
                     <br> Vous pouvez le trouver sur votre carte d'identité </p>
+                    <i>Vous pouvez noter plusieurs prénoms, au cas où vous en auriez plus d'un. Vous ne pouvez pas écrire de nombres, ni de signes spéciaux sauf un signe moins (-)</i>
             </details></span>
         </li>
         <li>
@@ -26,6 +27,7 @@
                 <p>Entrez votre nom ici s'il vous plaît
                     <br> Aussi connu sous le nom de votre nom de famille. Vous pouvez le trouver sur votre carte d'identité.
                 </p>
+                <i>Vous pouvez noter plusieurs prénoms, au cas où vous en auriez plus d'un. Vous ne pouvez pas écrire de nombres, ni de signes spéciaux sauf un signe moins (-)</i>
             </details></span>
         </li>
         <li>
