--- a/templates/fr/gez_explanation.html
+++ b/templates/fr/gez_explanation.html
@@ -9,7 +9,10 @@
 <h1>Bienvenue dans notre GEZ-help!</h1>
 <h2>Vous avez demandé de l'aide pour un document gez.</h2>
 <p>GEZ est la redevance de diffusion ici en Allemagne. Chaque appartement doit le payer, donc il n'y a pas d'échappatoire, si vous voulez vivre en Allemagne.</p>
+<p>Vous devez également être âgé d'au moins 18 ans pour payer les frais de licence.</p>
+<p>Après avoir soumis le formulaire, vous devrez payer les frais régulièrement.</p>
 <p>Bien que cela puisse être ennuyeux de payer, vous ne devez remplir le document qu'une seule fois, tant que vous vivez dans votre appartement actuel.</p>
+<p>Les médias publics sont soutenus par cet argent. Ces médias sont indépendants des entreprises privées qui veulent manipuler la portée du droit public à leurs propres fins.</p>
 <h3>Nous divisons le document en plusieurs petites parties.</h3>
 <ul>
     <li>Tout d'abord, nous avons besoin de vos informations générales, telles que votre nom ou votre date de naissance</li>
