--- a/templates/fr/sepa/sepa1.html
+++ b/templates/fr/sepa/sepa1.html
@@ -14,8 +14,11 @@
         <span><details>
             <summary>
                 Aider?
-            </summary>Entrez votre nom complet dans l'ordre suivant: titre, nom, prénom<br> Par exemple: Dr Mustermann Max
-        <br>Si ce compte bancaire n'est pas le vôtre, veuillez noter le nom du propriétaire de ce compte.</span>
+            </summary>Entrez votre nom complet dans l'ordre suivant: titre, nom, prénom<br> 
+            <br>Si ce compte bancaire n'est pas le vôtre, veuillez noter le nom du propriétaire de ce compte.
+            <br>Par exemple: Dr Mustermann Max
+            <i>Vous pouvez noter plusieurs prénoms, au cas où vous en auriez plus d'un. Vous ne pouvez pas écrire de nombres, ni de signes spéciaux sauf un signe moins (-)</i>
+        </span>
         </details>
         </li>
         
