--- a/templates/fr/sepa/sepa3.html
+++ b/templates/fr/sepa/sepa3.html
@@ -14,7 +14,10 @@
             <span><details>
                 <summary>
                     Aider?
-                </summary>Entrez ici le code postal de votre adresse. Ce devrait être la même que l'adresse que vous avez écrite plus tôt.
+                </summary>Entrez ici le code postal de votre adresse. Ce devrait être la même que l'adresse que vous avez écrite plus tôt.<br>
+                <i>Le code postal ne comporte que cinq chiffres</i><br>
+                Par exemple 67812, 62342
+
             </details> </span>
         </li>
         <li>
@@ -23,7 +26,9 @@
             <span><details>
                 <summary>
                     Aider?
-                </summary>Entrez ici la ville de votre domicile. Ce devrait être la même que l'adresse que vous avez écrite plus tôt.
+                </summary>Entrez ici la ville de votre domicile. Ce devrait être la même que l'adresse que vous avez écrite plus tôt.<br>
+                <i>Vous ne pouvez pas écrire de nombres, ni de signes spéciaux sauf un signe moins (-)</i><br>
+                Par exemple: Paris, Lyon.
                 </details> </span>
         </li>
         <li>
