--- a/templates/fr/sepa/sepa4.html
+++ b/templates/fr/sepa/sepa4.html
@@ -16,7 +16,8 @@
                     Aider?
                 </summary>Saisissez ici l'IBAN de votre compte bancaire. Il est également connu sous le nom de code d'identification bancaire. <br>
                 Il s'agit d'une connexion depuis le pays dans lequel vous vivez, votre code bancaire et votre numéro de compte.<br>
-                Par example: <i>DE02120300000000202051     </i>
+                <i>Vous devez écrire deux lettres majuscules et 20 lettres après.</i>
+                Par example: DE02120300000000202051     
             </details> </span>
         </li>
         <li>
@@ -26,7 +27,8 @@
                 <summary>
                     Aider?
                 </summary>Saisissez ici le BIC de votre compte bancaire. Il est également connu sous le nom de code d'identification de votre banque.<br>
-                Par example: <i>BYLADEM1001</i>	
+                <i>Vous devez écrire au moins 7 et au plus 8 lettres majuscules et au plus 4 chiffres.</i><br>
+                Par example: BYLADEM1001	
             </details></span>
         </li>
         <li>
@@ -35,8 +37,9 @@
             <span><details>
                 <summary>
                     Aider?
-                </summary>Saisissez ici le nom de votre établissement de crédit.
-                Par example: <i>France Kredit Bank Paris </i>
+                </summary>Saisissez ici le nom de votre établissement de crédit.<br>
+                <i>Vous devez commencer par une lettre et vous ne pouvez pas écrire de chiffres</i><br>
+                Par example: France Kredit Bank Paris 
             </details></span>
         </li>
         <li>
