--- a/templates/de/adress/adress3.html
+++ b/templates/de/adress/adress3.html
@@ -9,13 +9,14 @@
         <h1> Adresse 3/5</h1>
         <li>
             <label for="adress_additions">Adresszusatz (optional):</label>
-            <input type="text" id="adress_additions" name="adress_additions" required>
+            <input type="text" id="adress_additions" name="adress_additions" >
             <span class="extra-info">
                 <details>
                     <summary>
                         Hilfe?
                     </summary>
                     <p>Bitte geben Sie ihren Adresszusatz an sofern vorhanden. Z.B. erster Stock oder Wohnung Nr. 23</p>
+                    Es ist komplett optional
                 </details>
             </span>
         </li>
