--- a/templates/de/adress/adress4.html
+++ b/templates/de/adress/adress4.html
@@ -14,7 +14,9 @@
                 <span class="extra-info">
                     <details>
                         <summary>Hilfe?</summary>
-                        <p>Bitte geben Sie ihre Postleitzahl ein. Z.B. 68161</p>
+                        <p>Bitte geben Sie ihre Postleitzahl ein.<br>
+                            <i>Eine Postleitzahl hat nur 5 Ziffern!</i><br>
+                             Z.B. 68161</p>
                     </details>
                 </span>
             </li>
@@ -24,7 +26,9 @@
                 <span class="extra-info">
                     <details>
                         <summary>Hilfe?</summary>
-                        <p>Bitte geben Sie den Namen der Stadt ein in der Sie aktuell leben. Z.B. Mannheim</p>
+                        <p>Bitte geben Sie den Namen der Stadt ein in der Sie aktuell leben. Z.B. Mannheim<br>
+                        <i>Sie können keine Nummer, noch Sonderzeichen außer einen Bindestrich (-) eingeben</i><br>
+                        Zum Beispiel: Mannheim, Frankfurt</p>
                     </details>
                 </span>
             </li>
