--- a/templates/de/general_information/general_information1.html
+++ b/templates/de/general_information/general_information1.html
@@ -14,7 +14,7 @@
             <span>
                 <details>
                     <summary>Hilfe?</summary>
-                    <p>Bitte geben Sie hier ihr Geschlecht ein. Sind Sie eine Mann (mäannlich) oder eine Frau
+                    <p>Bitte geben Sie hier ihr Geschlecht ein. Sind Sie ein Mann (männlich) oder eine Frau
                         (weiblich).</p>
                 </details>
             </span>
