--- a/templates/de/general_information/general_information2.html
+++ b/templates/de/general_information/general_information2.html
@@ -14,7 +14,8 @@
                 <details>
                     <summary>Hilfe?</summary>
                     <p>Bitte geben Sie hier ihren Vornamen ein.
-                        <br> Diesen können Sie auf ihrem Personalausweis finden.
+                        <br> Diesen können Sie auf ihrem Personalausweis finden.<br>
+                        <i>Sie können mehrere Vornamen eingeben, falls Sie mehr als einen haben. Sie können keine Ziffern, noch Sonderzeichen außer einen Bindestrich (-) eingeben</i>
                     </p>
                 </details>
             </span>
@@ -25,8 +26,9 @@
             <span>
                 <details>
                     <summary>Hilfe?</summary>
-                    <p>Bitte geben hier Ihren NAchnamen ein.
-                        <br> Auch als bekannt als Familienname. Auch diesen finden Sie auf ihrem Personalausweis.
+                    <p>Bitte geben hier Ihren Nachnamen ein.
+                        <br> Auch als bekannt als Familienname. Auch diesen finden Sie auf ihrem Personalausweis.<br>
+                        <i>Sie können mehrere Nachnamen eingeben, falls Sie mehr als einen haben. Sie können keine Ziffern, noch Sonderzeichen außer einen Bindestrich (-) eingeben</i>
                     </p>
                 </details>
             </span>
