--- a/templates/de/sepa/sepa3.html
+++ b/templates/de/sepa/sepa3.html
@@ -15,7 +15,10 @@
                 <details>
                     <summary>Hilfe?</summary>
                     <p>Bitte geben Sie die PLZ des Kontoinhabers ein. Bitte beachten Sie, dass der Kontoinhaber von der
-                        Person die den Antrag stellt abweichen kann.</p>
+                        Person die den Antrag stellt abweichen kann.<br>
+                        <i>Eine Postleitzahl besteht aus 5 Ziffern!</i><br>
+                        Zum Beispiel: 68305, 62342
+                    </p>
                 </details>
             </span>
         </li>
