--- a/templates/bg/sepa/sepa4.html
+++ b/templates/bg/sepa/sepa4.html
@@ -31,7 +31,7 @@
         </li>
         <li>
             <label for="credit_institution">Банкова институция:</label>
-                    <input type="text" id="credit_institution" name="credit_institution" pattern="^\p{Alpha}[^0-9]*" required>
+                    <input type="text" id="credit_institution" name="credit_institution" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span><details>
                 <summary>
                     Помощ?
