--- a/templates/de/sepa/sepa1.html
+++ b/templates/de/sepa/sepa1.html
@@ -16,7 +16,8 @@
                     <summary>Hilfe?</summary>
                     <p>Bitte geben Sie den Namen des Kontoinhabers ein. Bitte beachten Sie, dass der Kontoinhaber von
                         der
-                        Person die den Antrag stellt abweichen kann.</p>
+                        Person die den Antrag stellt abweichen kann.<br>
+                    <i>Sie können keine Ziffern, noch Sonderzeichen außer einen Bindestrich (-) eingeben.</i></p>
             </span>
             </details>
         </li>
