--- a/templates/bg/general_information/general_information2.html
+++ b/templates/bg/general_information/general_information2.html
@@ -9,7 +9,7 @@
     <ul>
         <li>
             <label for="fName">Първо име</label>
-            <input type="text" name="firstName" id="fName" pattern="[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+            <input type="text" name="firstName" id="fName" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span><details><summary>
                 Помощ?
             </summary> 
@@ -19,7 +19,7 @@
         </li>
         <li>
             <label for="lastName">Фамилия</label>
-            <input type="text" name="lastName" id="lName" pattern="[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+            <input type="text" name="lastName" id="lName" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span><details><summary>
                 Помощ?
             </summary> 
