--- a/templates/en/adress/adress4.html
+++ b/templates/en/adress/adress4.html
@@ -21,7 +21,7 @@
         </li>
         <li>
             <label for="city">City:</label>
-            <input type="text" id="city" name="city" pattern="[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+            <input type="text" id="city" name="city" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span class="extra-info"><details><summary>Help?
 
             </summary>
