--- a/templates/en/general_information/general_information2.html
+++ b/templates/en/general_information/general_information2.html
@@ -9,7 +9,7 @@
     <ul>
         <li>
             <label for="fName">First Name</label>
-            <input type="text" name="firstName" id="fName" pattern="[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*"  required>
+            <input type="text" name="firstName" id="fName" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*"  required>
             <span><details><summary>
                 Help?
             </summary> 
@@ -20,7 +20,7 @@
         </li>
         <li>
             <label for="lastName">Last Name</label>
-            <input type="text" name="lastName" id="lName" pattern="[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+            <input type="text" name="lastName" id="lName" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span><details><summary>
                 Help?
             </summary> 
