--- a/templates/en/sepa/sepa3.html
+++ b/templates/en/sepa/sepa3.html
@@ -21,7 +21,7 @@
         </li>
         <li>
             <label for="area">City:</label>
-            <input type="text" id="area" name="area" pattern="[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+            <input type="text" id="area" name="area" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span><details>
                 <summary>
                     Help?
