--- a/templates/fr/sepa/sepa1.html
+++ b/templates/fr/sepa/sepa1.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
         <label for="name">Nom</label>
-        <input type="text" name="fullName" id="name" pattern="[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+        <input type="text" name="fullName" id="name" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
         <span><details>
             <summary>
                 Aider?
