--- a/templates/bg/adress/adress4.html
+++ b/templates/bg/adress/adress4.html
@@ -13,7 +13,9 @@
             <span class="extra-info"><details><summary>Помощ?
 
             </summary>
-            Моля, въведете пощенския код на адреса си. Например 67812, 62342
+            Моля, въведете пощенския код на адреса си.<br>
+            <i>Пощенският код има 5 цифри</i><br>
+             Например 67812, 62342
             </details>
         </span>
         </li>
@@ -23,7 +25,9 @@
             <span class="extra-info"><details><summary>Помощ?
 
             </summary>
-            Моля, въведете името на града, в който живеете. Например: София, Пазарджик.
+            Моля, въведете името на града, в който живеете. <br>
+            <i>Не можете да пишете никакви цифри, нито някакви специални знаци с изключение на минус (-)</i><br>
+            Например: София, Пазарджик.
         </details>
                
             </span>
