--- a/templates/bg/general_information/general_information2.html
+++ b/templates/bg/general_information/general_information2.html
@@ -14,7 +14,8 @@
                 Помощ?
             </summary> 
                 <p>Моля, напишете си първото име.
-                    <br> Може да го намерите на личната Ви карта. </p>
+                    <br> Може да го намерите на личната Ви карта. 
+                <i>Можете да запишете няколко собствени имена, в случай че имате повече от едно. Не можете да пишете никакви цифри, нито някакви специални знаци с изключение на минус (-)</i></p>
             </details></span>
         </li>
         <li>
@@ -25,6 +26,7 @@
             </summary> 
                 <p>Моля, напишете си последното име. 
                     <br> Още познато като Вашата фамилия, може да го намерите на личната Ви карта.
+                    <br> <i>Можете да запишете няколко фамилни имена, в случай че имате повече от едно. Не можете да пишете никакви цифри, нито някакви специални знаци с изключение на минус (-)</i>
                 </p>
             </details></span>
         </li>
