--- a/templates/bg/sepa/sepa1.html
+++ b/templates/bg/sepa/sepa1.html
@@ -15,7 +15,8 @@
             <summary>
                 Помощ?
             </summary>Въведете пълното си име в следния ред: заглавие, фамилия, име<br> Например: д-р Мустерман Макс
-        <br> Ако тази банкова сметка не е ваша, моля, запишете името на собственика на тази сметка.</span>
+        <br> Ако тази банкова сметка не е ваша, моля, запишете името на собственика на тази сметка.
+        <i>Не можете да пишете никакви цифри, нито някакви специални знаци с изключение на минус (-)</i></span>
         </details>
         </li>
         
