--- a/templates/bg/sepa/sepa3.html
+++ b/templates/bg/sepa/sepa3.html
@@ -14,7 +14,8 @@
             <span><details>
                 <summary>
                     Помощ?
-                </summary>Въведете тук пощенския код на адреса Ви, моля. То трябва да бъде същото като адреса, който сте записали по-рано.
+                </summary>Въведете тук пощенския код на адреса Ви, моля. То трябва да бъде същото като адреса, който сте записали по-рано.<br>
+                <i>Пощенският код има 5 цифри</i><br>
             </details> </span>
         </li>
         <li>
@@ -23,7 +24,8 @@
             <span><details>
                 <summary>
                     Помощ?
-                </summary>Моля, въведете тук града, в който живеете. То трябва да бъде същото като адреса, който сте записали по-рано.
+                </summary>Моля, въведете тук града, в който живеете. То трябва да бъде същото като адреса, който сте записали по-рано.<br>
+                <i>Не можете да пишете никакви цифри, нито някакви специални знаци с изключение на минус (-)</i>
                 </details> </span>
         </li>
         <li>
