--- a/templates/bg/sepa/sepa4.html
+++ b/templates/bg/sepa/sepa4.html
@@ -16,7 +16,8 @@
                     Помощ?
                 </summary>Въведете IBAN на банковата си сметка тук, моля. Той е известен и като идентификационен код на вашата банка. <br>
                 Това е връзка от държавата, в която живеете, вашия банков код и номер на вашата сметка.<br>
-                Например: <i>DE02120300000000202051     </i>
+                <i>След това трябва да напишете две главни букви и 20 букви.</i>
+                Например: DE02120300000000202051    
             </details> </span>
         </li>
         <li>
@@ -26,7 +27,8 @@
                 <summary>
                     Помощ?
                 </summary>Въведете BIC на вашата банкова сметка тук, моля. Той е известен също като вашия банков идентификационен код.<br>
-                Например: <i>BYLADEM1001</i>	
+                <i>Трябва да напишете поне 7 и най-много 8 главни букви и най-много 4 цифри.</i><br>
+                Например: BYLADEM1001	
             </details></span>
         </li>
         <li>
@@ -35,8 +37,9 @@
             <span><details>
                 <summary>
                     Помощ?
-                </summary>Въведете тук името на вашата банкова институция, моля.
-                    Например: <i>УниКредит Булбанк </i>
+                </summary>Въведете тук името на вашата банкова институция, моля.<br>
+                <i>Трябва да започнете с буква и не можете да пишете никакви цифри, нито някакви специални знаци с изключение на минус (-)</i><br>
+                    Например: УниКредит Булбанк 
             </details></span>
         </li>
         <li>
