--- a/templates/bg/sepa/sepa2.html
+++ b/templates/bg/sepa/sepa2.html
@@ -10,11 +10,12 @@
     <ul>
         <li>
             <label for="street">Улица:</label>
-            <input type="text" id="street" name="street" required>
+            <input type="text" id="street" name="street"  pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span><details>
                 <summary>
                     Помощ?
-                </summary>Въведете тук името на Вашата улицата, моля. То трябва да бъде същото като адреса, който сте записали по-рано.
+                </summary>Въведете тук името на Вашата улицата, моля. То трябва да бъде същото като адреса, който сте записали по-рано.<br>
+                <i>Трябва да започнете с буква и не можете да пишете никакви цифри, нито някакви специални знаци с изключение на минус (-)</i>
             </details> </span>
         </li>
         <li>
