--- a/templates/en/adress/adress2.html
+++ b/templates/en/adress/adress2.html
@@ -14,7 +14,7 @@
     <span class="extra-info"> <details><summary>
         Help?
     </summary> 
-        <p>Please enter the name of the Street you are living in. 
+        <p>Please enter the name of the Street you are living in. <br>
             <i>You have to start with a letter, and you can not write any numbers, nor any special signs except a minus (-)</i><br>
             <br>For example: Examplestreet, Longstreet
         </p>
