--- a/templates/en/adress/adress2.html
+++ b/templates/en/adress/adress2.html
@@ -36,7 +36,7 @@
 </li>
 <li>
     <input type="button" value="Back" onClick="javascript:history.back()">
-    <input type="submit" value='submit'>
+    <input type="submit" value='Submit'>
 </li>
 </ul>
 </form>
