--- a/templates/en/adress/adress5.html
+++ b/templates/en/adress/adress5.html
@@ -21,7 +21,7 @@
         </li>
         <li>
             <input type="button" value="Back" onClick="javascript:history.back()">
-            <input type="submit" value='submit'>
+            <input type="submit" value='Submit'>
         </li>
 
     </ul>
